--- a/splashx-frontend/package.json
+++ b/splashx-frontend/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/figtree": "^4.5.3",
+    "@fontsource/poppins": "^4.5.10",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
