--- a/splashx-frontend/package.json
+++ b/splashx-frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/layout": "^2.1.19",
+    "@chakra-ui/popover": "^2.1.11",
     "@chakra-ui/react": "^2.6.1",
     "@chakra-ui/transition": "^2.0.16",
     "@emotion/react": "^11.11.0",
