--- a/splashx-frontend/tsconfig.json
+++ b/splashx-frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    //target part was added due to :await error in generated anime
+
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
