ADD: wallets connect

--- a/splashx-frontend/package.json
+++ b/splashx-frontend/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/figtree": "^4.5.3",
     "@fontsource/poppins": "^4.5.10",
+    "@thirdweb-dev/react": "^3.12.1",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
