--- a/splashx-frontend/package.json
+++ b/splashx-frontend/package.json
@@ -30,6 +30,7 @@
     "next": "13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-lorem-ipsum": "^1.4.10",
     "replicate": "^0.12.1",
     "typescript": "5.0.4"
